# sover

./: Cargo.toml  README.md  sample.txt
available/: Cargo.toml
available/src/: bad.rs  check.rs  fingerprint.rs  lib.rs
src/: dns.rs  file.rs  fingerprint.rs  main.rs  requests.rs
