[package]
name = "sover"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "2.33.3"
reqwest = { version = "0.11", features = ["json", "blocking", "native-tls", "trust-dns"] }
tokio = { version = "1", features = ["full"] }
trust-dns-client = "0.20.3"
trust-dns-resolver = "0.20.3"
whois-rust = { version = "1.3.3", features = ["tokio"] }
available = { path = "./available", version = "0.1.0" }
async-trait = "0.1.52"
log = "0.4.0"
env_logger = "0.8.4"
colored = "2"


[workspace]
members=[
    "available"
]
